# synapse

./: .gitignore  Addins.mds  Makefile.am  Makefile.include  Synapse.Linux.mds  Synapse.Linux.sln  Synapse.Mac.mds  Synapse.Mac.sln  Synapse.Windows.sln  Synapse.mds  autogen.sh  configure.ac  synapse.desktop  version.sh
addins/Banshee/: AssemblyInfo.cs  Banshee.addin.xml  Banshee.csproj  Banshee.mdp  BansheeNowPlayingProvider.cs  IPlayerEngineService.cs  Makefile.am  PlayerEvent.cs  banshee.pc.in
addins/CodeSnippets/: AssemblyInfo.cs  CodeSnippets.addin.xml  CodeSnippets.mdp  ConversationHeader.html  IPasteFormatPreviewer.cs  Makefile.am
addins/CodeSnippets/Synapse.Addins.CodeSnippets/: CodeMessageDisplayFormatter.cs  CodeSnippetsService.cs  InsertSnippetAction.cs  InsertSnippetDialog.cs
addins/CodeSnippets/qt-gui/: InsertSnippetDialog.cs  InsertSnippetDialog.ui
addins/FireEagle/: AssemblyInfo.cs  FireEagle.addin.xml  FireEagle.mdp  FireEagleAddinPreferencesDialog.cs  FireEagleAddinPreferencesFactory.cs  FireEagleService.cs  FireEagleWebIdentityConfigurator.cs  Makefile.am
addins/FireEagle/qt-gui/: FireEagleAddinPreferencesDialog.cs  FireEagleAddinPreferencesDialog.ui
addins/Twitter/: AssemblyInfo.cs  Makefile.am  Twitter.addin.xml  Twitter.mdp  TwitterAccountHandler.cs  TwitterAddinPreferencesDialog.cs  TwitterAddinPreferencesFactory.cs  TwitterClient.cs  TwitterConfigurationDialog.cs  TwitterService.cs  TwitterShoutHandler.cs  TwitterWebIdentityConfigurator.cs  TwitterXmlApi.cs  ViewOnTwitterAction.cs
addins/Twitter/gtk-gui/: Synapse.Addins.TwitterAddin.TwitterAddinPreferencesDialog.cs  gui.stetic
addins/Twitter/qt-gui/: TwitterAddinPreferencesDialog.cs  TwitterAddinPreferencesDialog.ui  TwitterConfigurationDialog.cs  TwitterConfigurationDialog.ui
addins/Wikipedia/: AssemblyInfo.cs  Makefile.am  Makefile.am~  Makefile.in~  Makefile~  Wikipedia.addin.xml  Wikipedia.csproj  Wikipedia.mdp  Wikipedia.mds  WikipediaMessageDisplayFormatter.cs
addins/YouTube/: ConversationHeader.html  Makefile.am  YouTube.addin.xml  YouTube.csproj  YouTube.mdp  YouTubeMessageDisplayFormatter.cs  youtube.pc.in
contrib/: HtmlAgilityPack.dll.mdb  Hyena.Gui.dll.config  Hyena.Gui.dll.mdb  Hyena.dll.mdb  Makefile.am  Mono.Rocks.dll.mdb  NDesk.DBus.dll.mdb  OAuth.dll.mdb  OAuthXmpp.dll.mdb  Wilco.SyntaxHighlighter.dll.mdb  jabber-net.dll.mdb
contrib/gtk/: clutter-gtk-sharp.dll.config  clutter-gtk-sharp.dll.mdb  clutter-sharp.dll.config  clutter-sharp.dll.mdb
src/Synapse.Core/: AssemblyInfo.cs  AssemblyInfo.cs.in  Makefile.am  Synapse.Core.addin.xml  Synapse.Core.csproj  Synapse.Core.mdp  synapse-core.pc.in  synapse.core.pc.in
src/Synapse.Core/Synapse.Core/: AbstractService.cs  ApplicationContext.cs  ExtensionMethods.cs  HtmlSanitizer.cs  Magic.cs  PList.cs  Pair.cs  Paths.cs  PlatformHacks.cs  PropertyCollection.cs  ReadOnlyDictionary.cs  SerializableDictionary.cs  Serialization.cs  StringWriterWithEncoding.cs  UserException.cs  Util.cs  XdgBaseDirectorySpec.cs
src/Synapse.Core/Synapse.Core.ExtensionMethods/: IEnumerable.cs  StringExtensions.cs
src/Synapse.QtClient/: AboutDialog.cs  AbstractSimpleFileEngine.cs  AccountStatusWidget.cs  AddFriendWindow.cs  AddOctyDialog.cs  AssemblyInfo.cs  AssemblyInfo.cs.in  AvatarFileEngine.cs  AvatarGrid.cs  AvatarGridZoomAction.cs  AvatarSelectDialog.cs  BookmarkedMUCsModel.cs  BuiltinActions.cs  ChatWindow.cs  ChatWindowContainerWindow.cs  ConversationWidget.cs  EditAccountDialog.cs  EditGroupsWidget.cs  ErrorDialog.cs  FadingQLabel.cs  GlobalActions.cs  Gui.cs  Helper.cs  IUpdateableAction.cs  IWebIdentityConfigurator.cs  JSDebugObject.cs  KeyPressEater.cs  Main.cs  Makefile.am  OctyService.cs  PList.cs  PreferencesWindow.cs  ProfileWindow.cs  QCoreApplicationExtras.cs  QtTraceListener.cs  ResizableGraphicsPixmapItem.cs  ResourceFileEngine.cs  RosterWidget.cs  Synapse.QtClient.addin.xml  Synapse.QtClient.mdp  (+7 more)
src/Synapse.QtClient/QyotoTrunk/: QByteArrayConverter.cs  QFormLayout.cs  QPlainTextEdit.cs  QTextBlock.cs
src/Synapse.QtClient/Synapse.QtClient.ExtensionNodes/: ActionCodon.cs  IActionCodon.cs  QWidgetTypeExtensionNode.cs  SeparatorCodon.cs  WebIdentityConfiguratorCodon.cs
src/Synapse.QtClient/Synapse.QtClient.UI.Views/: ChatWindow.cs  DebugWindow.cs  EditGroupsWindow.cs  MainWindow.cs  PreferencesWindow.cs  ProfileWindow.cs  ServiceBrowserWindow.cs  TabbedChatsWindow.cs  TrayIconView.cs
src/Synapse.QtClient/Synapse.QtClient.Widgets/: AccountStatusWidget.cs  AvatarGrid.FadeInOutAnimation.cs  AvatarGrid.InfoPopup.cs  AvatarGrid.RosterItem.cs  AvatarGrid.RosterItemGroup.cs  AvatarGrid.Scene.cs  AvatarGrid.cs  AvatarLabel.cs  ConversationTextEdit.cs  ConversationWidget.cs  EditGroupsWidget.cs  FadingQLabel.cs  LightboxContainerWidget.cs  MainTabWidget.cs  NoAccountsWidget.cs  NotificationsWidget.cs  RosterWidget.cs  StubbornWebView.cs  WebIdentityConfiguratorWidget.cs
src/Synapse.QtClient/Synapse.QtClient.Windows/: AddAccountDialog.cs  AddFriendWindow.cs  AvatarSelectDialog.cs  ChatWindow.cs  DebugWindow.cs  EditAccountDialog.cs  EditGroupsWindow.cs  EditProfileDialog.AvatarTab.cs  EditProfileDialog.WebIdentitiesTab.cs  EditProfileDialog.cs  ErrorDialog.cs  InsertLinkDialog.cs  InviteToMucDialog.cs  MainWindow.cs  (+5 more)
src/Synapse.Services/: AssemblyInfo.cs  AssemblyInfo.cs.in  Makefile.am  Synapse.Services.addin.xml  Synapse.Services.csproj  Synapse.Services.mdp  synapse-services.pc.in  synapse.services.pc.in
src/Synapse.UI/: AbstractController.cs  AccountChatWindowManager.cs  ActionHandlerAttribute.cs  AssemblyInfo.cs  ChatWindowManager.cs  EventHandlers.cs  IActionItemCodon.cs  IAddinPreferencesFactory.cs  IAvatarGridModel.cs  IAvatarProvider.cs  IController.cs  IDialogView.cs  IView.cs  Makefile.am  MucAvatarGridModel.cs  ResourceCodon.cs  ResourceProviderCodon.cs  RosterAvatarGridModel.cs  Synapse.UI.addin.xml  Synapse.UI.csproj  Synapse.UI.mdp  ViewFactory.cs  synapse.ui.pc.in  template4dotnet.cs
src/Synapse.Xmpp/: AssemblyInfo.cs  Makefile.am  Synapse.Xmpp.addin.xml  Synapse.Xmpp.csproj  Synapse.Xmpp.mdp  synapse.xmpp.pc.in
(+305 files in other folders)
