# Begin MonoDevelop-maintained variables

FILES =  \
	AboutDialog.cs \
	AbstractSimpleFileEngine.cs \
	AddOctyDialog.cs \
	AssemblyInfo.cs \
	AvatarFileEngine.cs \
	AvatarGridZoomAction.cs \
	BookmarkedMUCsModel.cs \
	GlobalActions.cs \
	Gui.cs \
	IUpdateableAction.cs \
	IWebIdentityConfigurator.cs \
	KeyPressEater.cs \
	Main.cs \
	OctyService.cs \
	qt-gui/AboutDialog.cs \
	qt-gui/AccountStatusWidget.cs \
	qt-gui/AddFriendWindow.cs \
	qt-gui/AddOctyDialog.cs \
	qt-gui/ChatWindow.cs \
	qt-gui/DebugWindow.cs \
	qt-gui/EditAccountDialog.cs \
	qt-gui/EditGroupsWidget.cs \
	qt-gui/EditGroupsWindow.cs \
	qt-gui/EditProfileDialog.cs \
	qt-gui/ErrorDialog.cs \
	qt-gui/InsertLinkDialog.cs \
	qt-gui/InviteToMucDialog.cs \
	qt-gui/MainWindow.cs \
	qt-gui/MucAffiliationDialog.cs \
	qt-gui/NoAccountsWidget.cs \
	qt-gui/PreferencesWindow.cs \
	qt-gui/ProfileWindow.cs \
	qt-gui/RosterWidget.cs \
	qt-gui/ServiceBrowserWindow.cs \
	qt-gui/WebIdentityConfiguratorWidget.cs \
	QtTraceListener.cs \
	QyotoTrunk/QFormLayout.cs \
	QyotoTrunk/QPlainTextEdit.cs \
	QyotoTrunk/QTextBlock.cs \
	ResizableGraphicsPixmapItem.cs \
	ResourceFileEngine.cs \
	Synapse.QtClient.ExtensionNodes/ActionCodon.cs \
	Synapse.QtClient.ExtensionNodes/IActionCodon.cs \
	Synapse.QtClient.ExtensionNodes/QWidgetTypeExtensionNode.cs \
	Synapse.QtClient.ExtensionNodes/SeparatorCodon.cs \
	Synapse.QtClient.ExtensionNodes/WebIdentityConfiguratorCodon.cs \
	Synapse.QtClient.Widgets/AccountStatusWidget.cs \
	Synapse.QtClient.Widgets/AvatarGrid.cs \
	Synapse.QtClient.Widgets/AvatarGrid.FadeInOutAnimation.cs \
	Synapse.QtClient.Widgets/AvatarGrid.InfoPopup.cs \
	Synapse.QtClient.Widgets/AvatarGrid.RosterItem.cs \
	Synapse.QtClient.Widgets/AvatarGrid.RosterItemGroup.cs \
	Synapse.QtClient.Widgets/AvatarGrid.Scene.cs \
	Synapse.QtClient.Widgets/AvatarLabel.cs \
	Synapse.QtClient.Widgets/ConversationTextEdit.cs \
	Synapse.QtClient.Widgets/ConversationWidget.cs \
	Synapse.QtClient.Widgets/EditGroupsWidget.cs \
	Synapse.QtClient.Widgets/FadingQLabel.cs \
	Synapse.QtClient.Widgets/LightboxContainerWidget.cs \
	Synapse.QtClient.Widgets/MainTabWidget.cs \
	Synapse.QtClient.Widgets/NoAccountsWidget.cs \
	Synapse.QtClient.Widgets/NotificationsWidget.cs \
	Synapse.QtClient.Widgets/RosterWidget.cs \
	Synapse.QtClient.Widgets/WebIdentityConfiguratorWidget.cs \
	Synapse.QtClient.Windows/AddFriendWindow.cs \
	Synapse.QtClient.Windows/ChatWindow.cs \
	Synapse.QtClient.Windows/DebugWindow.cs \
	Synapse.QtClient.Windows/EditAccountDialog.cs \
	Synapse.QtClient.Windows/EditGroupsWindow.cs \
	Synapse.QtClient.Windows/EditProfileDialog.AvatarTab.cs \
	Synapse.QtClient.Windows/EditProfileDialog.cs \
	Synapse.QtClient.Windows/EditProfileDialog.WebIdentitiesTab.cs \
	Synapse.QtClient.Windows/ErrorDialog.cs \
	Synapse.QtClient.Windows/InsertLinkDialog.cs \
	Synapse.QtClient.Windows/InviteToMucDialog.cs \
	Synapse.QtClient.Windows/MainWindow.cs \
	Synapse.QtClient.Windows/MucAffiliationDialog.cs \
	Synapse.QtClient.Windows/PreferencesWindow.cs \
	Synapse.QtClient.Windows/ProfileWindow.cs \
	Synapse.QtClient.Windows/ServiceBrowserWindow.cs \
	Synapse.QtClient.Windows/TabbedChatsWindow.cs \
	SynapseJSObject.cs \
	TrayIcon.cs \
	WindowMover.cs 

RESOURCES =  \
	resources/addocty.html \
	resources/collapse.png \
	resources/default-avatar.png \
	resources/effects.js \
	resources/expand.png \
	resources/feed.html \
	resources/friend-muclist.html \
	resources/handle.png \
	resources/loading.gif \
	resources/mainwindow.qss \
	resources/mainwindow-noaccounts.qss \
	resources/mainwindow-tabs.qss \
	resources/menu-icon.png \
	resources/music-16.png \
	resources/newtab.html \
	resources/oceanbg.png \
	resources/octy.png \
	resources/octy.svg \
	resources/octy-22.png \
	resources/octy-32.png \
	resources/octyaddme.png \
	resources/profile.html \
	resources/prototype.js \
	resources/ServiceDiscovery.html \
	resources/simple-add.png \
	resources/simple-search.png \
	resources/stock_icons/internet-group-chat__16.png \
	resources/stock_icons/internet-group-chat__24.png \
	resources/stock-close_12.png \
	resources/Template.html \
	resources/text.png \
	resources/view-grid.png \
	resources/view-list.png \
	Synapse.QtClient.addin.xml 

REFERENCES =  \
	$(GLIB_SHARP_20_LIBS) \
	$(GTK_SHARP_20_LIBS) \
	$(NDESK_DBUS_GLIB_10_LIBS) \
	$(NOTIFY_SHARP_LIBS) \
	$(QTWEBKIT_SHARP_LIBS) \
	$(QYOTO_LIBS) \
	Mono.Posix \
	System \
	System.Core \
	System.Drawing \
	System.Xml

PROJECT_REFERENCES =  \
	../../build/Debug/Synapse.Core.dll \
	../../build/Debug/Synapse.Services.dll \
	../../build/Debug/Synapse.UI.dll \
	../../build/Debug/Synapse.Xmpp.dll

DLL_REFERENCES =  \
	../../contrib/Hyena.dll \
	../../contrib/jabber-net.dll \
	../../contrib/Mono.Addins.dll \
	../../contrib/Mono.Rocks.dll

# End MonoDevelop-maintained variables

ASSEMBLY = $(BUILD_DIR)/Synapse.exe
ASSEMBLY_MDB = $(ASSEMBLY).mdb

SYNAPSE_QTCLIENT_PC = $(BUILD_DIR)/synapse.qtclient.pc

SYNAPSE = $(BUILD_DIR)/synapse

SYNAPSE_ADDINS = $(BUILD_DIR)/Synapse.addins

LINUX_PKGCONFIG = \
	$(SYNAPSE_UI_PC)  

BINARIES = $(SYNAPSE)

EXTRA_DIST = $(SYNAPSE) $(SYNAPSE_UI_PC) $(SYNAPSE_ADDINS) $(RESOURCES) $(FILES) $(THEMES_DIR) Synapse.addins

all: $(ASSEMBLY) $(ASSEMBLY_MDB) $(LINUX_PKGCONFIG) $(SYNAPSE) $(SYNAPSE_ADDINS)

include $(top_srcdir)/Makefile.include

pkglib_SCRIPTS += $(SYNAPSE_ADDINS)

CLEANFILES += $(SYNAPSE) $(SYNAPSE_ADDINS)

$(eval $(call emit-deploy-wrapper,SYNAPSE,synapse,x))
$(eval $(call emit-deploy-wrapper,SYNAPSE_QTCLIENT_PC,synapse.ui.pc))

$(SYNAPSE_ADDINS): Synapse.addins
	cp Synapse.addins $(SYNAPSE_ADDINS)

$(ASSEMBLY) $(ASSEMBLY_MDB): $(build_sources) $(RESOURCES) $(DLL_REFERENCES) $(PROJECT_REFERENCES)
	mkdir -p $(shell dirname $(ASSEMBLY))
	$(MCS) $(MCS_FLAGS) -out:$(ASSEMBLY) $(build_sources) $(build_resources_embed) $(build_references_ref)
	cp -r $(THEMES_DIR) $(BUILD_DIR)/themes

clean-local:
	rm -rf $(BUILD_DIR)/themes

THEMES_DIR = resources/themes
INSTALLED_THEMES_DIR = $(prefix)/share/synapse/themes/

install-data-hook:
	mkdir -p $(DESTDIR)$(INSTALLED_THEMES_DIR)
	echo "Installing Themes..."
	cd $(THEMES_DIR) && find . -type f -exec $(INSTALL_DATA) -D -v '{}' '$(DESTDIR)$(INSTALLED_THEMES_DIR){}' \; ;

uninstall-hook:
	rm -rf $(INSTALLED_THEMES_DIR)
